--- a/.eslintrc
+++ b/.eslintrc
@@ -1,22 +1,3 @@
 {
-  "parser": "@typescript-eslint/parser",
-  "extends": [
-    "react-app",
-    "plugin:@typescript-eslint/recommended",
-    "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 2020,
-    "sourceType": "module"
-  },
-  "rules": {},
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  }
+  "extends": ["react-app", "plugin:prettier/recommended"]
 }
